# ldap-control-panel

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: action_ci.yml  action_release.yml  ci.yml  job_dockerhub_publish.yml  job_dockerhub_readme.yml  job_release_semantic.yml  release.yml
.github/workflows/jobs/: dockerhub_publish.yml  release_semantic.yml
docs/: applications.md  configuration.md  develop.md  development.md  index.md  installation.md
ldap_idp/: __init__.py  config.py  ldap_backend.py  main.py  serve.py  settings.yaml
ldap_idp/lib_textual/: app_base.py  comp_config.py  comp_store.py  decorators.py  layouts.py  wid_tree.py
ldap_idp/subapps/browser/: app_content.py  app_menu.py  main.py
ldap_idp/subapps/viewer/: app_content.py  app_menu.py  main.py
