[project]
name = "ldap_idp"
version = "0.1.0"
description = "Simple ldap-manager"
authors = [
    {name = "mrjk"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">3.12,<4"
dependencies = [
    "textual[syntax] (>=5.0.1,<6.0.0)",
    "python-ldap (>=3.4.4,<4.0.0)",
    "click (>=8.0.0,<9.0.0)",
    "pyyaml (>=6.0.0,<7.0.0)",
    "textual-serve (>=1.1.2,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "dynaconf (>=3.2.11,<4.0.0)"
]

[project.scripts]
ldapcp-tui = "ldap_idp.main:main"
ldapcp-serve = "ldap_idp.serve:serve"

[tool]
[tool.poetry]
[tool.poetry.group.dev]
[tool.poetry.group.dev.dependencies]
textual-dev = "^1.7.0"
black = "^25.1.0"
pytest = "^8.4.1"
python-semantic-release = "^10.2.0"

# https://guicommits.com/semantic-release-to-automate-versioning-and-publishing-to-pypi-with-github-actions/
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "ldap_idp/__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
version_pattern = [
    "README.md:mrjk78/ldap-control-panel:{version}",
    # "docs/CONTRIBUTING.md:tryceratops, version {version}"
]
major_on_zero = false
branch = "main"
upload_to_PyPI = true
upload_to_release = true
build_command = "pip install poetry && poetry build"